2008-07-01  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* jhbuild/commands/base.py (cmd_list.__init__): Add an option to
	list all modules.

	* contrib/jhbuild_completion.bash: Propose all modules for the
	completion.  Fixes: #540706

2008-07-01  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* jhbuild/versioncontrol/git.py (GitBranch._update): Also stash
	uncommitted changes for normal git, it's so nice.

2008-06-29  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* modulesets/gnome-suites-2.22.modules: gnome-python-desktop in
	2.22 branch now uses a local waf 1.3.2 provided in the repository.
	Fixes #538673.

2008-06-28  Diego Escalante Urrelo  <diegoe@gnome.org>

	* modulesets/gnome-2.24.modules: Fix pyclutter and clutter-vala svn paths.

2008-06-27  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* modulesets/freedesktop-2.24.modules: Added libcanbbera.

2008-06-27  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* modulesets/pulseaudio.modules: Removed gst-pulse (moved to
	gst-plugins-good), switch the repositories to the new Git
	location.

2008-06-26  Marco Pesenti Gritti  <mpg@redhat.com>

	* modulesets/online-desktop-modules: Remove more cut-pasted modules.

2008-06-26  Marco Pesenti Gritti  <mpg@redhat.com>

	* modulesets/online-desktop-modules: Remove our own empathy module,
	just pull it from 2.24.

2008-06-26  Marco Pesenti Gritti  <mpg@redhat.com>

	* modulesets/online-desktop-modules: switch to gnome 2.24

2008-06-25  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.22.modules, modulesets/gnome-2.24.modules:
	switched gnome-packagekit to GNOME Subversion, as it is mirrored
	there and translators were confused by Git.

2008-06-25  Marco Pesenti Gritti  <mpg@redhat.com>

	* modulesets/gnome-suites-2.24.modules: Make gnome-session depend on
	at-spi.

2008-06-23  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/rdepends.py: catch KeyError on invalid module and
	display a nice error message.
