@@ -855,8 +855,13 @@ libgnomecanvas is missing branch definition for gnome-2-20
       expanded list of modules the <command>build</command> command
       would build.</para>
 
+      <para>Run with the <option>-a</option> option, this command will
+      list all the modules known from your moduleset configuration
+      regardless of the build dependency.</para>
+
       <cmdsynopsis>
 	<command>jhbuild list</command>
+	<arg>-a</arg>
 	<arg>-r</arg>
 	<arg>-s</arg>
 	<arg>--tags=<replaceable>tags</replaceable></arg>
@@ -868,6 +873,14 @@ libgnomecanvas is missing branch definition for gnome-2-20
       module list found in the configuration file will be used.</para>
 
       <variablelist>
+	<varlistentry>
+	  <term><option>-a</option>,
+	  <option>--all-modules</option></term>
+	  <listitem>
+	    <simpara>List all the modules</simpara>
+	  </listitem>
+	</varlistentry>
+
 	<varlistentry>
 	  <term><option>-r</option>,
 	  <option>--show-revision</option></term>
