@@ -1,3 +1,7 @@
+2008-07-01  Marc-André Lureau  <marcandre.lureau@gmail.com>
+
+	* doc/C/jhbuild.xml: Document the "list -a" option.
+
 2008-07-01  Marc-Andre Lureau  <marcandre.lureau@gmail.com>
 
 	* jhbuild/commands/base.py (cmd_list.__init__): Add an option to
